Downgrade to java 8. Migrate to microprofile.