@@ -64,7 +64,7 @@
         <!-- common properties -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
 
         <!-- plugins versions -->
         <version.plugin.maven-compiler-plugin>3.8.0</version.plugin.maven-compiler-plugin>
@@ -88,7 +88,7 @@
         <version.lib.asm>7.1</version.lib.asm>
 
         <!-- dependencies -->
-        <version.lib.slf4j-api>1.8.0-beta4</version.lib.slf4j-api>
+        <version.lib.slf4j-api>1.7.26</version.lib.slf4j-api>
         <version.lib.jackson-databind>2.9.9</version.lib.jackson-databind>
         <version.lib.jakarta.persistence-api>2.2.2</version.lib.jakarta.persistence-api>
         <version.lib.junit-bom>5.4.0</version.lib.junit-bom>
@@ -96,8 +96,7 @@
         <version.lib.jersey.hk2>2.28</version.lib.jersey.hk2>
         <version.lib.jersey-media-json-jackson>2.28</version.lib.jersey-media-json-jackson>
         <version.lib.jackson-jaxrs-json-provider>2.9.9</version.lib.jackson-jaxrs-json-provider>
-        <version.lib.jakarta.json.bind-api>1.0.1</version.lib.jakarta.json.bind-api>
-        <version.lib.jakarta.json-api>1.1.5</version.lib.jakarta.json-api>
+        <version.lib.microprofile>2.2</version.lib.microprofile>
 
         <!-- compatibility -->
         <version.lib.jakarta.activation-api>1.2.1</version.lib.jakarta.activation-api>
@@ -110,9 +109,13 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${version.plugin.maven-compiler-plugin}</version>
-                    <configuration>
-                        <release>${java.version}</release>
-                    </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.ow2.asm</groupId>
+                            <artifactId>asm</artifactId>
+                            <version>${version.lib.asm}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <!-- This plugin generates the buildNumber property used in maven-bundle-plugin -->
@@ -283,13 +286,9 @@
                             </goals>
                         </execution>
                     </executions>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.ow2.asm</groupId>
-                            <artifactId>asm</artifactId>
-                            <version>${version.lib.asm}</version>
-                        </dependency>
-                    </dependencies>
+                    <configuration>
+                        <source>8</source>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -369,6 +368,14 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.eclipse.microprofile</groupId>
+                <artifactId>microprofile</artifactId>
+                <version>${version.lib.microprofile}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${version.lib.slf4j-api}</version>
@@ -401,16 +408,6 @@
                 <version>${version.lib.junit-bom}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>jakarta.json.bind</groupId>
-                <artifactId>jakarta.json.bind-api</artifactId>
-                <version>${version.lib.jakarta.json.bind-api}</version>
-            </dependency>
-            <dependency>
-                <groupId>jakarta.json</groupId>
-                <artifactId>jakarta.json-api</artifactId>
-                <version>${version.lib.jakarta.json-api}</version>
             </dependency>
             <dependency>
                 <groupId>jakarta.activation</groupId>
@@ -455,6 +452,92 @@
                         </configuration>
                     </plugin>
                 </plugins>
+            </build>
+        </profile>
+
+        <!-- java 9+ was disabled due to https://bugs.openjdk.java.net/browse/JDK-8210483 -->
+        <!--profile>
+            <id>jdk9+</id>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+            <properties>
+                <packaging.type>jar</packaging.type>
+            </properties>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <version>${version.plugin.maven-compiler-plugin}</version>
+                            <executions>
+                                <execution>
+                                    <id>default-compile</id>
+                                    <configuration-->
+                                        <!-- compile everything to ensure module-info contains right entries -->
+                                        <!--release>9</release>
+                                    </configuration>
+                                </execution>
+                                <execution>
+                                    <id>base-compile</id>
+                                    <goals>
+                                        <goal>compile</goal>
+                                    </goals-->
+                                    <!-- recompile everything for target VM except the module-info.java -->
+                                    <!--configuration>
+                                        <excludes>
+                                            <exclude>module-info.java</exclude>
+                                        </excludes>
+                                        <source>${java.version}</source>
+                                        <target>${java.version}</target>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                            <configuration>
+                                <source>${java.version}</source>
+                                <target>${java.version}</target>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <configuration>
+                                <forkCount>0</forkCount>
+                                <argLine--><!--add-modules java.xml.bind --><!--illegal-access=permit</argLine>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+
+        </profile-->
+
+        <profile>
+            <id>jdk8-</id>
+            <activation>
+                <!--jdk>(,9)</jdk-->
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <packaging.type>bundle</packaging.type>
+            </properties>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <version>${version.plugin.maven-compiler-plugin}</version>
+                            <configuration>
+                                <source>${java.version}</source>
+                                <target>${java.version}</target>
+                                <excludes>
+                                    <exclude>module-info.java</exclude>
+                                </excludes>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
             </build>
         </profile>
     </profiles>
